--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: SkuldNet
 email:
 description: > # this means to ignore newlines until "baseurl:"
-  Website of SkuldNet Consortium for brain and mind research.
+  Website of the SkuldNet consciousness consortium.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://locahost:4000" # the base hostname & protocol for your site
 twitter_username: jekyllrb
